azureps-cmdlets-docs/ServiceManagement/ServiceManagement/Azure.Compute/v1.6.1/Stop-AzureService.md
---
external help file: Microsoft.WindowsAzure.Commands.dll-Help.xml
online version: 
schema: 2.0.0
ms.assetid: 82D56EF9-9651-4224-9BA0-498750F6F551
---

# Stop-AzureService

## SYNOPSIS
Stops the current hosted service.

## SYNTAX

```
Stop-AzureService [[-ServiceName] <String>] [[-Slot] <String>] [-PassThru] [-Profile <AzureSMProfile>]
 [<CommonParameters>]
```

## DESCRIPTION
powershell_prelim

The **Stop-AzureService** cmdlet stops the current hosted service in the specified slot in Windows Azure.
If no slot is specified, the cmdlet stops the service in the Production slot.

## EXAMPLES

### 1:
```
PS C:\>
```

## PARAMETERS

### -ServiceName
Specifies the name of the hosted service to stop.
If no name is specified, the cmdlet stops the current hosted service.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -Slot
Specifies the slot where the service is hosted, either **Staging** or **Production**.
If no slot is specified, **Production** is assumed.

```yaml
Type: String
Parameter Sets: (All)
Aliases: 

Required: False
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### -PassThru

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Profile
In-memory profile.

```yaml
Type: AzureSMProfile
Parameter Sets: (All)
Aliases: 

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters
This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see about_CommonParameters (http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

## OUTPUTS

## NOTES

## RELATED LINKS

[Remove-AzureService](./Remove-AzureService.md)

[Start-AzureService](./Start-AzureService.md)


